# nonebot_plugin_antimonkey

./: .gitignore  LICENSE  README.md  pipx_shared.pth  pyproject.toml  requirement.txt  setup.py
nonebot_plugin_antimonkey/: __init__.py  image_recognition.py  malou.py
plugins/nonebot_plugin_antimonkey/: __init__.py
